@@ -16,6 +16,8 @@ update-manager (1:0.125.7) UNRELEASED; urgency=low
   * po/ 
     - updated from launchpad (required as during a release upgrade
       we can't use langpacks)
+  * UpdateManager/backend/InstallBackendAptdaemon.py:
+    - give up lock before running aptdaemon (LP: #445920)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Sep 2009 13:32:13 +0200
 
